--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "nestapi",
+  "name": "backendapi",
   "version": "0.0.1",
   "description": "",
   "author": "",
@@ -27,7 +27,7 @@
     "@nestjs/platform-express": "^10.0.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
-    "mongoose": "^8.4.4",
+    "mongoose": "^8.4.3",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1"
   },
